--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,11 +1,35 @@
+<!DOCTYPE HTML>
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		Hello Coursera !
-	</title>
+	<title>Assignment Solution for Module 2</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<h1>Hello Vivek</h1>
+<h1>Cities of Andhra Pradesh</h1>
+<div class="row">
+	<div class="col-lg-4 col-md-6 col-sm-12">
+	<section class="section1">
+		<h2 >Visakhapatnam</h2>
+		<p>Visakhapatnam (also known as Vizag (/vaɪzɑːɡ/) and Waltair (/wɒltɛər/) is the largest city of Andhra Pradesh. The city is the administrative headquarters of Visakhapatnam district and state headquarters of Indian Coast Guard.Its geographical location is amidst the Eastern Ghats and the coast of the Bay of Bengal. It is the most populous city in the state with a population of 2,035,922 as of 2011, making it the 11th-largest city in the country, and the fourth-most populous in South India. It is also the ninth-most populous metropolitan area in India with a population of 5,018,000. With an output of $43.5.billion, Visakhapatnam is the ninth-largest contributor to India's overall gross domestic product as of 2016.
+		It is referred to by many nicknames such as The City of Destiny and The Jewel of the East Coast.</p>
+	</section>
+	</div>
+	<div class="col-lg-4 col-md-6 col-sm-12">
+	<section class="section2">
+		<h2>Vijayawada</h2>
+		<p>Vijayawada (formerly called Bezawada) is city in the Indian state of Andhra Pradesh. It lies on the banks of River Krishna. It is one of the twelve urban local bodies and is a highly developed area in the Andhra Pradesh Capital Region The city is also the second largest by population in the state and third most densely populated urban built-up areas in the world.Due to the presence of several well-known educational institutions, the city has emerged as a major educational hub in recent times, with many of nationwide students studying in the city. Due to its rating highly in entertainment, food as well as health care, transport, It is ranked as India's ninth most liveable city as per Ease of Living Index 2018, Ministry of Housing and Urban Affairs and 2nd most liveable city in the state of Andhra Pradesh.</p>
+	</section>
+	</div>
+	<div class="col-lg-4 col-md-12 col-sm-12">
+	<section class="section3">
+		<h2>Guntur</h2>
+		<p>Guntur is a city and the administrative headquarters of Guntur district in the Indian state of Andhra Pradesh. Guntur city is the 24th most densely populated city in the world and 11th in India. It is situated 40 miles (64 km) to the north of the Bay of Bengal, on the Eastern Coastal Plains. The city forms a part of the Andhra Pradesh Capital Region, administered by APCRDA. It is a municipal corporation and also the headquarters of Guntur East and Guntur West mandals in Guntur revenue division. As of 2011 census of India the city is the third most populous in the state with a population of 743,354. It forms a part of Visakhapatnam-Guntur Industrial Region, a major industrial corridor in the country. The city is known for its chilli, cotton and tobacco exports and has the largest chilli market yard in Asia. </p>
+	</section>
+	</div>
+</div>
 </body>
 </html>
+
