--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -55,14 +55,17 @@
 		<section class="section1">
 		<h3 style="text-align: center;">Chicken</h3>
 		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+		<a href="#Menu" style="text-align: center" class="visible-xs"> <p>(End of Chicken, Click to go to Top)</p></a>
 		</section>
 		</div>
+
 	</div>
 	<div class="col-md-4 col-sm-6 col-xs-12">
 		<div id="lobster">
 		<section>
 		<h3 style="text-align: center;">Lobster</h3>
 		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+		<a href="#Menu" style="text-align: center" class="visible-xs"> <p>(End of Lobster, Click to go to Top)</p></a>
 		</section>
 		</div>
 	</div>
@@ -71,6 +74,7 @@
 		<section>
 		<h3 style="text-align: center;">Mutton</h3>
 		<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+		<a href="#Menu" style="text-align: center" class="visible-xs"> <p>(End of Mutton, Click to go to Top)</p></a>
 		</section>
 		</div>
 	</div>
